<resources>
    <string name="app_name">Calculator</string>
    <string name="txt0">0</string>
    <string name="btnAC">AC</string>
    <string name="btnOB">(</string>
    <string name="btnCB">)</string>
    <string name="btnC"> C </string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn0">0</string>
    <string name="btnplus">+</string>
    <string name="btnsub">-</string>
    <string name="btndiv">/</string>
    <string name="btnmul">*</string>
    <string name="btneq">=</string>
    <string name="btndot">.</string>
    <string name="btnmod">%</string>
</resources>